--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,15 @@
 body {
      padding: 0;
      margin: 0;
+     background-color: #f5f5f5;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+     -webkit-appearance: none;
+     margin: 0;
+}
+input[type="number"] {
+     text-align: center;
 }
 /* :root {
   --foreground-rgb: 0, 0, 0;
